--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ branches:
 script:
 - ng lint
 - ng build --prod --base-href https://tester1313.github.io/teste-deploy/
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: dist/travis-demo
+  on:
+    branch: master
