Add github token na config
Variavel deve ser setada no painel do travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
+  github_token: $GITHUB_TOKEN
   local_dir: dist/teste-deploy
   on:
     branch: master
