Altera config de deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ os:
 dist: trusty
 sudo: required
 
-before_script:
-  - npm install -g @angular/cli
-
 branches:
   only:
   - master
+
+before_script:
+  - npm install -g @angular/cli
   
 script:
-- ng lint
+- npm run test-headless
 - ng build --prod --base-href https://tester1313.github.io/teste-deploy/
 
 deploy:
