--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js:
-  - 9
-os:
-  - linux
+  - "9"
 dist: trusty
 sudo: required
 
@@ -12,12 +10,13 @@ branches:
 
 before_script:
   - npm install -g @angular/cli
-  
-script:
-- npm run test-headless
-- ng build --prod --base-href https://tester1313.github.io/teste-deploy/
 
-deploy:
+script:
+  - ng lint
+  - npm run test-headless
+  - ng build --prod --base-href https://tester1313.github.io/teste-deploy/
+
+ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
