--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - npm install -g @angular/cli
   
 script:
-- npm run test-headless
+- ng lint
 - ng build --prod --base-href https://tester1313.github.io/teste-deploy/
 
 deploy:
